# SoulOS

./: .gitignore  CLAUDE.md  Cargo.toml  EGUI_BEST_PRACTICES.md  GEMINI.md  Makefile  NEXT_STEPS_EGUI_INTEGRATION.md  README.md  RHAI_BEST_PRACTICES.md  Research.md  Trunk.toml  accessibility.md  generate_icons.py  netlify.toml  test_automation.py  test_soulos.py  validate_scripts.py
.cargo/: config.toml
.claude/skills/: commit.md  create-component.md  test-app.md
.claude/skills/test-app/: SKILL.md
.claude/skills/test-app/references/: example_reference.md
.claude/skills/test-app/scripts/: example_script.cjs
.github/workflows/: android.yml  preview-screenshots.yml  web.yml
assets/draw/: canvas.pgm  draw_icon.pgm  green-notebook-and-pen.pgm
assets/emoji/: README.md  convert_emoji_pngs.py  soulos-grayscale.gpl
assets/emoji/meta/: README.md  emoji_index.json  emoji_list.json  generate_emoji_index.py  openmoji_index.json
assets/scripts/: address.rhai  button_demo.rhai  calc.rhai  date.rhai  egui_demo.rhai  egui_layout_demo.rhai  egui_scroll_demo.rhai  kitchen_sink.rhai  launcher2.rhai  mail.rhai  notes.rhai  prefs.rhai  scrollbar_test.rhai  sync.rhai  todo.rhai  todo_with_egui_scroll.rhai
assets/sprites/: address_icon.pgm  app_icons_spritesheet.pgm  app_icons_spritesheet_inverted.pgm  builder_icon.pgm  calc_icon.pgm  date_icon.pgm  default_icon.pgm  draw_icon.pgm  egui_demo_icon.pgm  launcher2_icon.pgm  mail_icon.pgm  notes_icon.pgm  paint_icon.pgm  prefs_icon.pgm  settings_icon.pgm  sync_icon.pgm  todo_icon.pgm
assets/sprites/paint_tools/: brush.pgm  erase.pgm  paint_size.pgm  paint_tools.pgm  pen.pgm
crates/soul-a11y/: Cargo.toml
crates/soul-a11y/src/: lib.rs
crates/soul-core/: Cargo.toml
crates/soul-core/src/: a11y.rs  edit.rs  exchange.rs  lib.rs
crates/soul-db/: Cargo.toml
crates/soul-db/src/: lib.rs
crates/soul-hal/: Cargo.toml
crates/soul-hal-android/: Cargo.toml
crates/soul-hal-android/src/: lib.rs  platform.rs
crates/soul-hal-hosted/: Cargo.toml
crates/soul-hal-hosted/src/: harness.rs  lib.rs  testing.rs
crates/soul-hal/src/: lib.rs
crates/soul-runner/: Cargo.toml
crates/soul-runner-android/: Cargo.toml  build.rs
crates/soul-runner-android/src/: lib.rs
crates/soul-runner-web/: Cargo.toml  index.html
crates/soul-runner-web/src/: app.rs  lib.rs  platform.rs
crates/soul-runner/src/: address.rs  assets.rs  builder.rs  calculator.rs  cnvcirc.rs  draw.rs  egui_demo.rs  gremlins.rs  harness_ext.rs  hd_text.rs  host.rs  item_chooser.rs  launcher.rs  launcher_store.rs  lib.rs  main.rs  notes.rs  paint.rs  settings.rs  snarf.rs  system_settings.rs  test_runner.rs  testing  todo.rs
crates/soul-runner/tests/: runner_harness.rs
crates/soul-script/: Cargo.toml
crates/soul-script/src/: lib.rs
crates/soul-script/tests/: calc_test.rs  consumption_test.rs  egui_demo_compat_test.rs  egui_harness_test.rs  event_compat_test.rs  legacy_compat_test.rs  mixed_event_test.rs  modern_todo_test.rs  notes_compat_test.rs  todo_compat_test.rs
crates/soul-ui/: Cargo.toml  build.rs
crates/soul-ui/src/: builder.rs  editmenu.rs  egui_bridge.rs  egui_integration.rs  egui_layout.rs  egui_scroll.rs  egui_widgets.rs  emoji.rs  font_aa.rs  form.rs  keyboard.rs  lib.rs  menu.rs  pagination.rs  palette.rs  primitives.rs  scrollbar.rs  selecttext.rs  tests.rs  textarea.rs  textinput.rs
docs/: A11y-Roadmap.md  Harness.md  MobileBuilder-PDD.md
scripts/: netlify-build.sh
