[workspace]
resolver = "2"
members = [
    "crates/soul-hal",
    "crates/soul-core",
    "crates/soul-ui",
    "crates/soul-db",
    "crates/soul-hal-hosted",
    "crates/soul-runner",
    "crates/soul-a11y",
    "crates/soul-script",
    "crates/soul-hal-android",
    "crates/soul-runner-android",
    "crates/soul-runner-web",
]
# Desktop builds (`cargo build`, `cargo check`, `cargo test`) skip the
# Android and web crates — Android only compiles under `cargo apk` with
# the NDK on PATH, web only compiles for `wasm32-unknown-unknown` under
# Trunk (`trunk serve`).
default-members = [
    "crates/soul-hal",
    "crates/soul-core",
    "crates/soul-ui",
    "crates/soul-db",
    "crates/soul-hal-hosted",
    "crates/soul-runner",
    "crates/soul-a11y",
    "crates/soul-script",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
embedded-graphics = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
egui = { version = "0.32", default-features = false, features = ["bytemuck"] }
soul-hal = { path = "crates/soul-hal" }
soul-core = { path = "crates/soul-core" }
soul-ui = { path = "crates/soul-ui" }
soul-db = { path = "crates/soul-db" }
soul-hal-hosted = { path = "crates/soul-hal-hosted" }
soul-a11y = { path = "crates/soul-a11y" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
