[package]
name = "soul-hal-hosted"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
soul-hal.workspace = true
soul-core.workspace = true
embedded-graphics.workspace = true
minifb = "0.28"
png = "0.17"

[dev-dependencies]
soul-runner = { path = "../soul-runner" }
