[package]
name = "soul-runner-web"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soul-hal.workspace = true
soul-core.workspace = true
soul-ui.workspace = true
soul-runner = { path = "../soul-runner" }
embedded-graphics.workspace = true
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "Event",
    "HtmlElement",
    "HtmlCanvasElement",
    "HtmlInputElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "DomRect",
    "MouseEvent",
    "KeyboardEvent",
    "Touch",
    "TouchEvent",
    "TouchList",
    "EventTarget",
    "Performance",
]
