[package]
name = "soul-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
serde_json = "1.0"

[dependencies]
soul-hal.workspace = true
embedded-graphics.workspace = true
soul-core.workspace = true
serde.workspace = true
serde_json.workspace = true
egui.workspace = true
